--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
 <img id="x" src="xmas_img.png" alt="Christmas Tree Img">
 <h3 id="ft"></h3>
+       <noscript>
+       Enable JavaScript.
+       </noscript>
        <script src="javascript.js"></script>
 
 </body>
