--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <img id="x" src="xmas_img.png" alt="Christmas Tree Img">
 <h3 id="ft"></h3>
        <noscript>
-       Enable JavaScript.
+       Enable JavaScript.Browser Setting-Advanced-Site Setting.
        </noscript>
        <script src="javascript.js"></script>
 
